Adding description meta tag for SEO.

--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -1,8 +1,7 @@
 {%extends 'site_base.html' %}
 
-{% block title %}
-Event Promotion - Analytics
-{% endblock %}
+{% block title %}Event Promotion - Analytics{% endblock %}
+{% block description %}Event promotion analytics to show top influencers and connectors for your events. Track other trends including imprssions, reach, and facebook vs twitter shares.{% endblock %}
 
 {% block  js_css_include %}
 {% include "analytics_jsinclude.html" %}
