--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -7,6 +7,7 @@
 	{% endblock %}
 
 {% block title %}Event Promotion - About{% endblock %}
+{% block description %}Event Promotion Marketing - About the team. {% endblock %}
 
 
 {% block site-content %}
