--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="{% url static 'css/showLoading.css' %}" type="text/css" />	
 	{% endblock %}
 
-{% block title %}Admin Console.{% endblock %}
-
+{% block title %}Event Marketing Admin Console{% endblock %}
+{% block description %}Event marketing admin console which allows for the event promoter to change settings, preview landing page, create and modify widget, and view analytics.{% endblock %}
 
 {% block site-content %}
 <br/><br/><br/>
