--- a/core/templates/campaign_edit.html
+++ b/core/templates/campaign_edit.html
@@ -4,8 +4,8 @@
         {% include "campaign_edit_jsinclude.html" %}
 	{% endblock %}
 
-{% block title %}Admin Console (Edit).{% endblock %}
-
+{% block title %}Admin Console - Edit{% endblock %}
+{% block description %}Admin Console - Edit page that allows the user to change campaign settings. Share message, campaign title, discount code, and other parameters.{% endblock %}
 
 {% block site-content %}
 {% include "campaign_edit_content.html" %}
