--- a/core/templates/campaign_launch.html
+++ b/core/templates/campaign_launch.html
@@ -32,7 +32,7 @@
 	{% endblock %}
 
 {% block title %}Admin Console.{% endblock %}
-
+{% block description %}Event Marketing and Promotion Admin Console.{% endblock %}
 
 {% block site-content %}
 
