--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -21,6 +21,7 @@
 {% endblock %} 
 
 {% block title %}Event Promotions - Viral Incentive Referrals Tool - {{campaign.title}}{% endblock %}
+{% block description %}A deal landing page for Marketing and promoting your event by providing an incentive to attendees to share on facebook and twitter in return for discounts and other rewards.{% endblock %}
 
 {% block site-content %}
 
