--- a/core/templates/contact.html
+++ b/core/templates/contact.html
@@ -7,7 +7,7 @@
 	{% endblock %}
 
 {% block title %}Event Promotion - Contact{% endblock %}
-
+{% block description %}Event Promotion - Contact{% endblock %}
 
 {% block site-content %}
 
