--- a/core/templates/create_campaign.html
+++ b/core/templates/create_campaign.html
@@ -19,7 +19,9 @@
  	<link rel="stylesheet" href="{% url static 'css/create.css' %}" type="text/css" >
 {% endblock %} 
 
-{% block title %}Event Promotions - Viral Incentive Referrals Tool - Create{% endblock %}
+{% block title %}Create Event Promotion - Viral Incentive Referrals Tool - Create{% endblock %}
+{% block description %}Create Event Promotion which will reward people for sharing and tweeting on facebook and twitter in return for discounts and rewards.{% endblock %}
+
 
 {% block site-content %}
 <BR><BR><BR><BR>
