--- a/core/templates/howitworks.html
+++ b/core/templates/howitworks.html
@@ -7,7 +7,7 @@
 	{% endblock %}
 
 {% block title %}Event Promotions - Viral Incentive Referrals Tool{% endblock %}
-
+{% block description %}How it works, overview and description. Create a widget or a landing page, put it on your site, and watch your event spread virally over facebook and twitter.{% endblock %}
 
 {% block site-content %}
 <div id="howitworks-wrapper">
