--- a/core/templates/jobs.html
+++ b/core/templates/jobs.html
@@ -7,8 +7,8 @@
 	{% endblock %}
 
 
-{% block title %}Event Promotions - Viral Incentive Referrals Tool - Jobs{% endblock %}
-
+{% block title %}Event Marketing - Job Openings {% endblock %}
+{% block description %}Join the team. Looking for great people in Boston area who want to join a great startup.{% endblock %}
 
 {% block site-content %}
 <div class="person">
