--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -1,6 +1,7 @@
 {% extends "site_base.html" %}
 
 {% block title %}Event Promotions - Viral Incentive Referrals Tool{% endblock %}
+{% block description %}Promote your events by rewarding attendees for sharing on facebook and twitter. Give them incentives to share such as discounts, raffle entries, vip status at events, etc...{% endblock %}
 
 {% block  js_css_include %}
 <link type="text/css" href="{% url static 'css/frontpage_style.css' %}" rel="stylesheet">
