--- a/core/templates/campaign_admin2.html
+++ b/core/templates/campaign_admin2.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="{% url static 'css/campaign_admin_tabs.css' %}" type="text/css" />	
 	{% endblock %}
 
-{% block title %}Admin Console.{% endblock %}
-
+{% block title %}Event Marketing Admin Console{% endblock %}
+{% block description %}Event marketing admin console which allows for the event promoter to change settings, preview landing page, create and modify widget, and view analytics.{% endblock %}
 
 {% block site-content %}
 <br/><br/><br/>
