--- a/core/templates/campaign_page2.html
+++ b/core/templates/campaign_page2.html
@@ -22,6 +22,7 @@
 
 
     <title>Event Promotions - Viral Incentive Referrals Tool - {{campaign.title}}</title>
+    <meta name="description=" content="A deal landing page for Marketing and promoting your event by providing an incentive to attendees to share on facebook and twitter in return for discounts and other rewards.">
 
   </head>
 <body>
