--- a/core/templates/campaign_widget.html
+++ b/core/templates/campaign_widget.html
@@ -4,7 +4,8 @@
         {% include "campaign_widget_jsinclude.html" %}
 	{% endblock %}
 
-{% block title %}Widget{% endblock %}
+{% block title %}Event Promotion Widget{% endblock %}
+{% block description %}Widget to embed on your site that will promote your event by rewarding people for sharing on facebook and twitter.{% endblock %}
 
 
 {% block site-content %}
