--- a/core/templates/site_base.html
+++ b/core/templates/site_base.html
@@ -10,6 +10,7 @@
 	{% endblock %}
     
     <title>{% block title %} {% endblock %}</title>
+    <meta name="description=" content="{% block description %} {% endblock %}">
 
 
     <script type="text/javascript">
