--- a/core/templates/contact.html
+++ b/core/templates/contact.html
@@ -17,8 +17,8 @@
 </div>
 
 
-<div style="margin: 100px 0px 0px 100px; width: 90%;">
+<!--<div style="margin: 100px 0px 0px 100px; width: 90%;">
 <h1>RippleFunction is a proud Capital Factory Company!</h1>
 <a target="capfac"href="http://www.capitalfactory.com"><img style="margin-left: 40%; " height="70px" src="{% url static '/images/cf_logo.jpg'%}" /></a>
-</div>
+</div>-->
 {% endblock %}
