--- a/static/css/campaign_admin_tabs.css
+++ b/static/css/campaign_admin_tabs.css
@@ -19,7 +19,8 @@ ul.tabs li {
 /* link inside the tab. uses a background image */
 ul.tabs a { 
 	background: url(/site_media/images/tabs/blue.png) no-repeat -420px 0;
-	font-size:11px;
+	font-size:14px;
+	font-weight: 600;
 	display:block;
 	height: 30px;  
 	line-height:30px;
