--- a/static/css/campaign_admin.css
+++ b/static/css/campaign_admin.css
@@ -25,7 +25,33 @@ div#admin-info {
    margin-top: 20px;
    text-align: left;
 }
+button#launch-info-overlay {
+  #display: none;
+}
 
+.admin_overlay {
+    display: none;
+    z-index:10000;
+    background-color:#333;
+    width:675px;	
+    min-height:200px;
+    border:1px solid #666;
+		
+    /* CSS3 styling for latest browsers */
+    -moz-box-shadow:0 0 90px 5px #000;
+    -webkit-box-shadow: 0 0 90px #000;	
+}
+
+/* close button positioned on upper right corner */
+.admin_overlay .close {
+		background-image:url(../images/close.png);
+		position:absolute;
+		right:-15px;
+		top:-15px;
+		cursor:pointer;
+		height:35px;
+		width:35px;
+}
 
 
 div#admin_console {
