--- a/static/css/frontpage_style.css
+++ b/static/css/frontpage_style.css
@@ -44,7 +44,7 @@ body {
 	margin: auto;
 	padding: 18px 20px; 
 	width: 545px;
-	background: #ddd; 
+	background: #151B8D;
 	border-radius: 5px; 
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px; 
@@ -53,7 +53,7 @@ body {
 	text-align: center;
 	font-size: 26px;
 	font-weight: 600;
-        color: #3C8AAE;  
+        color:#C9C299;
 	cursor: pointer;
 	height: 60px;
 	width: 380px;
