--- a/core/templates/campaign_admin2.html
+++ b/core/templates/campaign_admin2.html
@@ -32,16 +32,16 @@
 <br/><br/><br/>
 
 <ul class="tabs">
-  <li><a href="#first">Landing Page</a></li>
-  <li><a href="#second">Edit</a></li>
+  <li><a href="#first">Edit</a></li>
+  <li><a href="#second">Ladning Page</a></li>
   <li><a href="#third">Widget</a></li>
   <li><a id="analytics_click" href="#third">Analytics</a></li>
 </ul>
 
 <!-- tab "panes" -->
 <div class="panes">
-  <div><iframe src ="{{landing_url}}" width="100%" height="1200"></iframe></div>
   <div><iframe src ="{{update_url}}" width="100%" height="1200"></iframe></div>
+  <div><iframe src ="{{landing_url}}" width="100%" height="1200"></iframe></div>
   <div><iframe src ="{{widget_url}}" width="100%" height="1200"></iframe></div>
   <div><iframe id="analytics_iframe" src ="{{analytics_url}}" width="100%" height="1200"></iframe></div>
 </div>
