Fixing up soem minor things.

--- a/core/templates/campaign_admin2.html
+++ b/core/templates/campaign_admin2.html
@@ -33,7 +33,7 @@
 
 <ul class="tabs">
   <li><a href="#first">Edit</a></li>
-  <li><a href="#second">Ladning Page</a></li>
+  <li><a id="landing_click" href="#second">Landing Page</a></li>
   <li><a href="#third">Widget</a></li>
   <li><a id="analytics_click" href="#third">Analytics</a></li>
 </ul>
@@ -41,7 +41,7 @@
 <!-- tab "panes" -->
 <div class="panes">
   <div><iframe src ="{{update_url}}" width="100%" height="1200"></iframe></div>
-  <div><iframe src ="{{landing_url}}" width="100%" height="1200"></iframe></div>
+  <div><iframe id="landing_iframe" src ="{{landing_url}}" width="100%" height="1200"></iframe></div>
   <div><iframe src ="{{widget_url}}" width="100%" height="1200"></iframe></div>
   <div><iframe id="analytics_iframe" src ="{{analytics_url}}" width="100%" height="1200"></iframe></div>
 </div>
@@ -86,9 +86,12 @@ $(document).ready(function(){
 $("ul.tabs").tabs("div.panes > div");
 
 $("#analytics_click").click(function(){
-$("analytics_iframe").attr("src", "{{analytics_url}}");
+document.getElementById('analytics_iframe').contentWindow.location.reload();
 });
 
+$("#landing_click").click(function(){
+document.getElementById('landing_iframe').contentWindow.location.reload();
+});
 
 // show pick winners if raffle
 if ('{{campaign.campaign_type}}' == 'raffle') {
