--- a/static/css/landingA.css
+++ b/static/css/landingA.css
@@ -88,7 +88,17 @@ margin: 0;
 	font-size: 30px;
 	font-weight: bold;
         margin: 20px;
+	margin-top: 5px;
+	margin-bottom: 10px;
 }
+
+#badge-bottom {
+    width: 100%;
+    height: 90px;
+    position: absolute;
+    bottom: 5px;
+}
+
 /*** Divider ***/
 #divider
 {
