--- a/static/css/campaign_admin.css
+++ b/static/css/campaign_admin.css
@@ -17,13 +17,31 @@ div#admin-header {
    -webkit-border-radius: 8px; 
 }
 
+div#admin-header h1{
+    border: 1px solid white;
+    font-size: 40px;
+}
+
 div#admin-info {
    background-color: white;
-   width: 60%; 
-   padding: 20px;
+   width: 80%; 
+   padding: 24px;
    margin: auto;
    margin-top: 20px;
    text-align: left;
+
+    -moz-border-radius-topleft: 20px;
+    -webkit-border-top-left-radius: 20px;
+    -moz-border-radius-topright: 20px;
+    -webkit-border-top-right-radius: 20px;
+
+    -moz-border-radius-bottomleft: 20px;
+    -webkit-border-bottom-left-radius: 20px;
+    -moz-border-radius-bottomright: 20px;
+    -webkit-border-bottom-right-radius: 20px;
+
+   -moz-box-shadow: 10px 10px 10px #999;
+   -webkit-box-shadow: 10px 10px 10px #999;		
 }
 button#launch-info-overlay {
   #display: none;
