--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -17,24 +17,25 @@
 	a {
 		outline: none;
 	}
-	a#twitter, a#facebook {
-		width:55px;
-		height:20px;
+	button#twitter-login, button#twitter-share {
+		width:64px;
+		height:23px;
 		background:url("../images/bar/twitter.png") no-repeat top;
 		margin-right:2px;
-		cursor:default;
+		cursor:pointer;
 		margin-left:10px;
 		float:right;
 	} 
-	a#facebook {
+	button#facebook-login, button#facebook-share {
 		width:64px;
+		height: 23px;
 		background:url("../images/bar/facebook.png") no-repeat top;
 		cursor:pointer;
 	}
-	a#twitter:hover{
+	a#twitter:hover {
 		background-position:center;
 	} 
-	a#twitter:active, a#facebook:active{
+	a#twitter-login:active, a#facebook-login:active{
 		background-position:bottom;
 	}
 	#external-site {
