Adding logo and fixing spacing on top bar.

--- a/core/templates/campaign_page_bar.html
+++ b/core/templates/campaign_page_bar.html
@@ -133,6 +133,9 @@
 
 	<!-- Ripple Function Bar -->
 	<div id="bar">
+                <div id="logo">
+		  <img src="{%url static 'images/logo-2color-blue-S.png' %}" />
+                </div>
 		<div id="content">
 			<div id="copy-text">Instant <strong>10% off your ticket</strong> just for sharing!</div>
 			<div id="buttons">
