--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -1,6 +1,6 @@
 	body {
 		font-family:'Helvetica Neue','Helvetica','Arial',sans-serif;
-		font-size:15px;
+		font-size:14px;
 		color:#333;
 		background:url("../images/bar/gradient.png") repeat-x;
 		text-align:right;
@@ -17,9 +17,36 @@
 	a {
 		outline: none;
 	}
+
+	#logo {
+	    float: left;
+	    margin-top: 4px;
+	    padding-left: 30px;
+        }
+	#logo img {
+	    height: 28px;
+        }
+
+        #content {
+	    margin-top: 5px;
+	    margin-right: 30px;
+	    width: 450px;
+	    margin-left: 50%;
+	    float: right;
+        }
+	#copy-text {
+	   margin-right: 15px;
+	   margin-top: 6px;
+	   float: left;
+	}
+
+	#buttons {
+	   float: right;
+        }
+
 	button#twitter-login, button#twitter-share {
 		width:60px;
-		height:25px;
+		height:24px;
 		background:url("../images/bar/twitter.png") no-repeat top;
 		margin-right:2px;
 		cursor:pointer;
@@ -29,7 +56,7 @@
 	} 
 	button#facebook-login, button#facebook-share {
 		width:62px;
-		height: 25px;
+		height: 24px;
 		background:url("../images/bar/facebook.png") no-repeat top;
 		cursor:pointer;
 	}
@@ -54,20 +81,4 @@
 	}
 
 
-	#content {
-	    margin-top: 5px;
-	    margin-right: 30px;
-	    width: 450px;
-	    margin-left: 50%;
-	    #margin: auto;
-        }
-	#copy-text {
-	   margin-right: 15px;
-	   #margin-top: 6px;
-	   float: left;
-	}
-
-	#buttons {
-	   float: right;
-	   #margin-top: 5px;
-        }
+	
