Adding css file to campaign_page_bar to fix spacing.

--- a/core/templates/campaign_page_bar.html
+++ b/core/templates/campaign_page_bar.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{% url static 'css/showLoading.css' %}" type="text/css" />	
     <link rel="stylesheet" href="{% url static 'css/blueprint/typography.css' %}" type="text/css" />	
     <link rel="stylesheet" href="{% url static 'css/overlayA.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% url static 'css/landingA.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% url static 'css/bar.css' %}" type="text/css" />
 
 
