Making the logo a link.

--- a/core/templates/campaign_page_bar.html
+++ b/core/templates/campaign_page_bar.html
@@ -135,7 +135,7 @@
 	<!-- Ripple Function Bar -->
 	<div id="bar">
                 <div id="logo">
-		  <img src="{%url static 'images/logo-2color-blue-S.png' %}" />
+		  <a href="http://ripplefunction.com" target="ripple"><img src="{%url static 'images/logo-2color-blue-S.png' %}" /></a>
                 </div>
 		<div id="content">
 			<div id="copy-text">Instant <strong>10% off your ticket</strong> just for sharing!</div>
