--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -1,17 +1,35 @@
 	body {
-		font-family:'Helvetica Neue','Helvetica','Arial',sans-serif;
+#		font-family:'Helvetica Neue','Helvetica','Arial',sans-serif;
+#		font-size:13px;
+		#color:#333;
+#		background:url("../images/bar/gradient.png") repeat-x;
+#		text-align:right;
+#		position: relative;		
+	}
+	
+	#bar {
+	        position: absolute;
+		height: 0px;
+		left: 0;
+		right: 0;
+		top: 0;
+                font-family:'Helvetica Neue','Helvetica','Arial',sans-serif;
+		height: 100px;
 		font-size:13px;
 		color:#333;
 		background:url("../images/bar/gradient.png") repeat-x;
 		text-align:right;
-	}
+	        #display: none;
+		z-index: 201;
+        }	
+
 	#shadow {
+	        position: absolute;
 		background:url("../images/bar/shadow.png") repeat-x;
 		height:6px;
 		left:0;
-		position:absolute;
 		right:0;
-		top:35px;
+		top: 35px;
 		z-index:201;
 	}
 	a {
