Makign bar scroll down.

--- a/core/templates/campaign_page_bar.html
+++ b/core/templates/campaign_page_bar.html
@@ -534,8 +534,8 @@ function resizeIframe() {
 //window.onresize = resizeIframe;
 
 $(document).ready(function(){
-    $('#copy-text').animate({'font-size': '18px'}, 1200, function(){
-    });
+    //setTimeout($('#copy-text').animate({'font-size': '18px'}, 2000, function(){}), 1000);
+    $("#bar").animate({'height': '35px'}, 2000, function(){});		       
 });
 
 
