--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -9,13 +9,13 @@
 	
 	#bar {
 	        position: absolute;
-		height: 0px;
+		#height: 0px;
 		left: 0;
 		right: 0;
-		top: 0;
+		#top: -20;
                 font-family:'Helvetica Neue','Helvetica','Arial',sans-serif;
-		height: 100px;
-		font-size:8px;
+		height: 0px;
+		font-size:18px;
 		color:#333;
 		background:url("../images/bar/gradient.png") repeat-x;
 		text-align:right;
