--- a/core/templates/campaign_page_bar.html
+++ b/core/templates/campaign_page_bar.html
@@ -536,6 +536,10 @@ function resizeIframe() {
 $(document).ready(function(){
     //setTimeout($('#copy-text').animate({'font-size': '18px'}, 2000, function(){}), 1000);
     $("#bar").animate({'height': '35px'}, 2000, function(){});		       
+    setTimeout($("#logo img").animate({'opacity':'1', 
+                                       'filter': 'alpha(opacity-100)'}, 2000, function(){}), 1000);
+    $("#shadow").animate({'top': '35px'}, 2100, function(){});
+    $("#external-site").animate({'top': '35px'}, 2000, function(){});
 });
 
 
