--- a/core/templates/campaign_page_bar.html
+++ b/core/templates/campaign_page_bar.html
@@ -534,13 +534,12 @@ function resizeIframe() {
 //window.onresize = resizeIframe;
 
 $(document).ready(function(){
-    setTimeout($('#copy-text').animate({'right': '170px'}, 2300, function(){}), 3000);
-    setTimeout($("#bar").animate({'height': '35px'}, 1300, function(){}), 2000);		       
-    setTimeout($("#logo img").animate({'opacity':'1', 
-                                       'filter': 'alpha(opacity=100)'}, 
-                                        1300, function(){}), 1000);
-    setTimeout($("#shadow").animate({'top': '35px'}, 1300, function(){}), 2000);
-    setTimeout($("#external-site").animate({'top': '35px'}, 1300, function(){}), 2000);
+    //setTimeout($('#copy-text').animate({'right': '170px'}, 2300, function(){}), 3000);
+    setTimeout("$('#bar').animate({'height': '35px'}, 1300, function(){})", 300);		       
+    setTimeout("$('#logo img').animate({'opacity':'1', 'filter': 'alpha(opacity=100)'}, 3000, function(){})", 300);
+    setTimeout("$('#copy-text').animate({'opacity':'1', 'filter': 'alpha(opacity=100)'}, 3000, function(){})", 300);
+    setTimeout("$('#shadow').animate({'top': '35px'}, 1300, function(){})", 300);
+    setTimeout("$('#external-site').animate({'top': '35px'}, 1300, function(){})", 300);
 });
 
 
