--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -29,7 +29,7 @@
 		height:6px;
 		left:0;
 		right:0;
-		top: 6px;
+		top: -3px;
 		z-index:201;
 	}
 	a {
@@ -56,9 +56,11 @@
         }
 
 	#copy-text {
+           opacity: 0;
+	   filter:alpha(opacity=0);
 	   margin-top: 2px;
 	   position: absolute;
-	   right: 870px;
+	   right: 170px;
 	}
 
 	#buttons {
