--- a/core/templates/campaign_page_bar.html
+++ b/core/templates/campaign_page_bar.html
@@ -536,10 +536,12 @@ function resizeIframe() {
 $(document).ready(function(){
     //setTimeout($('#copy-text').animate({'right': '170px'}, 2300, function(){}), 3000);
     setTimeout("$('#bar').animate({'height': '35px'}, 1300, function(){})", 300);		       
-    setTimeout("$('#logo img').animate({'opacity':'1', 'filter': 'alpha(opacity=100)'}, 3000, function(){})", 300);
-    setTimeout("$('#copy-text').animate({'opacity':'1', 'filter': 'alpha(opacity=100)'}, 3000, function(){})", 300);
-    setTimeout("$('#shadow').animate({'top': '35px'}, 1300, function(){})", 300);
+    //setTimeout("$('#shadow').animate({'top': '35px'}, 1300, function(){})", 300);
+    setTimeout("$('#shadow').show()", 1000)		       
     setTimeout("$('#external-site').animate({'top': '35px'}, 1300, function(){})", 300);
+
+    setTimeout("$('#logo img').animate({'opacity':'1', 'filter': 'alpha(opacity=100)'}, 2000, function(){})", 1200);
+    setTimeout("$('#copy-text').animate({'opacity':'1', 'filter': 'alpha(opacity=100)'}, 2000, function(){})", 1200);
 });
 
 
