--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -9,12 +9,11 @@
 	
 	#bar {
 	        position: absolute;
-		#height: 0px;
 		left: 0;
 		right: 0;
-		#top: -20;
+		top: 0;
                 font-family:'Helvetica Neue','Helvetica','Arial',sans-serif;
-		height: 0px;
+		height: 35px;
 		font-size:18px;
 		color:#333;
 		background:url("../images/bar/gradient.png") repeat-x;
@@ -31,7 +30,7 @@
 		right:0;
 		top: 35px;
 		z-index:201;
-		display: none;
+		#display: none;
 	}
 	a {
 		outline: none;
@@ -45,7 +44,6 @@
         }
 	#logo img {
 	    height: 28px;
-            display: none;
         }
 
         #content {
@@ -57,8 +55,8 @@
         }
 
 	#copy-text {
-           opacity: 0;
-	   filter:alpha(opacity=0);
+           #opacity: 0;
+	   #filter:alpha(opacity=0);
 	   margin-top: 2px;
 	   position: absolute;
 	   right: 170px;
@@ -103,7 +101,7 @@
 		padding:0;
 		position:absolute;
 		right:0;
-		top:0px;
+		top:35px;
 		width:100%;
 		z-index:200;
 	}
